crates/vite_task_bin/tests/e2e_snapshots/fixtures/cache-skip-vite-temp/snapshots/vite-temp read-write does not prevent caching.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vt run build # first run: cache miss
$ node build.mjs
built: export const hello = "world";
> vt run build # second run: should hit cache despite .vite-temp write
$ node build.mjs ◉ cache hit, replaying
built: export const hello = "world";

---
vt run: cache hit, <duration> saved.
